# orinox

./: .gitignore  AGENTS.md  Cargo.toml  README.md  skills-lock.json
src/: behaviour.rs  identity.rs  lib.rs  main.rs  swarm.rs  transport.rs
tests/: identity_lifecycle.rs
