[package]
name = "orinox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.13.0"

