[package]
name = "orinox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "tokio", "gossipsub"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.13.0"

